--- a/front-end/index.html
+++ b/front-end/index.html
@@ -45,5 +45,6 @@
 
     <script src="script.js"></script>
     <script src="tabs.js"></script>
+    <script src="generate-variants.js"></script>
   </body>
 </html>
