--- a/front-end/index.html
+++ b/front-end/index.html
@@ -43,7 +43,7 @@
       </div>
     </main>    
 
-    <script src="script.js"></script>
+    <script src="option-group-management.js"></script>
     <script src="tabs.js"></script>
     <script src="generate-variants.js"></script>
   </body>
