front-end ready to send data on server

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -17,6 +17,7 @@
             id="product"
             name="product"
             placeholder="Enter product name"
+            form="variants-publish" 
             required
           />
         </div>
@@ -46,5 +47,6 @@
     <script src="option-group-management.js"></script>
     <script src="tabs.js"></script>
     <script src="generate-variants.js"></script>
+    <script src="publish-variants.js"></script>
   </body>
 </html>
