back button functional

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -28,7 +28,8 @@
       </form>
 
       <!-- Live Suggestions -->
-      <ul id="suggestions" style="display: none;" class="suggestions-list"></ul>
+      <ul id="suggestions" style="display: none;" class="suggestions-list">
+      </ul>
 
       <!-- Search Results -->
       <div id="results" style="display: none;" class="results-container"></div>
