search button style change

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,7 +16,7 @@
   <main style="display: none;">
     <search-form>
       <form name="search-product" id="search-product" method="get" action="https://jsonplaceholder.typicode.com/users" autocomplete="off">
-        <label for="product">Product Name:</label>
+        <label for="product">Product Name</label>
         <input
           type="search"
           id="product"
@@ -34,6 +34,7 @@
       <!-- Search Results -->
       <div id="results" style="display: none;" class="results-container"></div>
     </search-form>
+    
   </main>
 
   <script src="authentication.js"></script>
