--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Custom Variant</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
@@ -13,34 +14,43 @@
     <button id="auth-button">Enter Password</button>
   </div>    
 
-  <main style="display: none;">
-    <search-form>
-      <form name="search-product" id="search-product" method="get" action="https://jsonplaceholder.typicode.com/users" autocomplete="off">
-        <label for="product">Product Name</label>
-        <input
-          type="search"
-          id="product"
-          name="product"
-          placeholder="Enter product name"
-          required
-        />
-        <button type="submit" id="search-product-button">Search</button>
-      </form>
+  <main>
+    <search-form class="kimi-search-form">
+      <!-- Search Box -->
+      <div class="search-box-container" >
+        
+        <form name="search-product" id="search-product" method="get" action="https://jsonplaceholder.typicode.com/users" autocomplete="off">
+          <div class="search-input-wrapper">  
+            <span class="search-icon"><i class="fas fa-search"></i></span>
+            <input
+              type="search"
+              id="product"
+              name="product"
+              placeholder="Search... Products Name"
+              required
+            />
+            <button type="submit" id="search-product-button">Search</button>
+          </div>
+        </form>
+      </div>
 
       <!-- Live Suggestions -->
-      <ul id="suggestions" style="display: none;" class="suggestions-list">
-      </ul>
+      <ul id="suggestions" style="display: none;" class="suggestions-list"></ul>
 
       <!-- Search Results -->
       <div id="results" style="display: none;" class="results-container"></div>
     </search-form>
-    
+  
   </main>
+
+
 
   <script src="authentication.js"></script>
   <script src="search-product.js"></script>
   <script src="tabs.js"></script>
   <script src="generate-variants.js"></script>
   <script src="publish-variants.js"></script>
+  <script src="demo.js"></script>
+ 
 </body>
 </html>
