--- a/front-end/index.html
+++ b/front-end/index.html
@@ -61,6 +61,6 @@
     <script src="tabs.js"></script>
     <script src="generate-variants.js"></script>
     <script src="publish-variants.js"></script>
-    <script src="topSearchBox.js"></script>
+    <!-- <script src="topSearchBox.js"></script> -->
   </body>
 </html>
